# crewai_multiagent_from_scratch_buildblogpost

./: .gitignore
crewai_multiagent_blogpost/: README.md  pyproject.toml  report.md
crewai_multiagent_blogpost/src/crewai_multiagent_blogpost/: crew.py  main.py
